objects/Metric__c.object
<CustomObject>
    <description>Keeps the Contact and some detailed metrics</description>
    <fields>
        <fullName>AM_SAM_attendance_at_RCD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>#AM &amp; SAM Attendance at RCD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AM_SAM_attendance_at_training__c</fullName>
        <description>TO DELETE</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM &amp; SAM attendance at training</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Average_quality_of_all_events__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Average quality of all events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Big_Challenge_Day_Event_Attended__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Big Challenge Day</inlineHelpText>
        <label>#BC Day Event Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAT_Meetings_Attended__c</fullName>
        <defaultValue>0</defaultValue>
        <label>#CAT Meetings Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cluster_name__c</fullName>
        <formula>Contact__r.Cluster__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ContactID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Metrics</relationshipLabel>
        <relationshipName>Metrics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Involved__c</fullName>
        <formula>IF(Big_Challenge_Day_Event_Attended__c +  CAT_Meetings_Attended__c +  YB_Meetings_Attended__c +  Local_Events_Attended__c +  Skill_Workshop_Attended__c +  Marketing_Ambassador_Events_Attended1__c +  Media_Ambassador_Events_Attended__c +  Staffing_Ambassador__c +  PC_Meetings_Attended__c +  Total_AM_SAM_Attendances__c +  Total_SignPosting_Oppty_Meetings_Attend__c &gt;= 1, &apos;Yes&apos;, &apos;No&apos; )</formula>
        <label>Involved</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Involved_f1__c</fullName>
        <formula>IF(Involved__c == &apos;Yes&apos;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Involved(f)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Involved_f__c</fullName>
        <formula>IF(ISPICKVAL(Active__c, &apos;Yes&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active(f)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Events_Attended__c</fullName>
        <defaultValue>0</defaultValue>
        <label>#Local Events Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Ambassador_Events_Attended1__c</fullName>
        <description>[DS[ I have filtered out YP records from here, as their metrics from last year should not be included here. This is a workaround while I think of something better</description>
        <formula>IF(OR( Contact__r.RecordTypeId = &quot;012C0000000Q2H0&quot;,Contact__r.RecordTypeId = &quot;012C0000000QBZg&quot;), 0,
IF(AND(ISPICKVAL(Contact__r.Account.Attended_Assembly_1__c,&apos;Yes&apos;),ISPICKVAL(Contact__r.Account.Attended_Assembly_2__c,&apos;Yes&apos;)),2,
IF(OR(ISPICKVAL(Contact__r.Account.Attended_Assembly_1__c,&apos;Yes&apos;),ISPICKVAL(Contact__r.Account.Attended_Assembly_2__c,&apos;Yes&apos;)),1,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>#Marketing Ambassador Events Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Media_Ambassador_Events_Attended__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Where the Campaign RT is Development/Advocacy Event</inlineHelpText>
        <label>#Media Ambassador Events Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meetings_attended_on_one_TCS_Attendance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>#Meetings attended on one TCS Attendance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nearly_Active__c</fullName>
        <label>Nearly Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Meetings_Attended__c</fullName>
        <defaultValue>0</defaultValue>
        <label>#PC Meetings Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skill_Workshop_Attended__c</fullName>
        <defaultValue>0</defaultValue>
        <label>#Skill Workshop Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Staffing_Ambassador__c</fullName>
        <defaultValue>0</defaultValue>
        <label>#Staffing Ambassador Events Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_AM_SAM_Attendances__c</fullName>
        <formula>AM_SAM_attendance_at_RCD__c +  AM_SAM_attendance_at_training__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total # AM &amp; SAM Attendances</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_SignPosting_Oppty_Meetings_Attend__c</fullName>
        <defaultValue>0</defaultValue>
        <label>#Total SignPosting Oppty Meetings Attend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_TCS_Events_Attended__c</fullName>
        <formula>Big_Challenge_Day_Event_Attended__c +  CAT_Meetings_Attended__c +  Local_Events_Attended__c +  Media_Ambassador_Events_Attended__c +  Skill_Workshop_Attended__c +  YB_Meetings_Attended__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>#Total TCS Events Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YB_Meetings_Attended__c</fullName>
        <defaultValue>0</defaultValue>
        <label>#YB Meetings Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YP_Want_to_Stay_Involved__c</fullName>
        <defaultValue>0</defaultValue>
        <label>% YP Want to Stay Involved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Metric</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Metric_checking</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Active__c</columns>
        <columns>Involved__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>notContain</operation>
            <value>Mehmet Ergun</value>
        </filters>
        <label>Metric checking</label>
    </listViews>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Metric Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>